--- a/src/public/index.css
+++ b/src/public/index.css
@@ -37,6 +37,7 @@ body {
     justify-content: center;
 
     font-size: large;
+    user-select: none;
     margin: 10px;
 
     border-radius: 5px;
